# api/openapi.yaml
@@ -169,20 +169,21 @@ paths:
                                 error:
                                     type: string
                                     example: "이미 존재하는 이메일입니다."
-  /user/follow::
+  /user/follow:
     post:
         tags:
             - user
         summary: 팔로우
         description: body에 folloingId 받고, header 에 jwt 토큰 받는 API
         parameters:
-            - in: header
-              name: Authorization
-              description: JWT 토큰 (Bearer 방식)
-              required: true
-              schema:
-                  type: string
-              example: Bearer <your_jwt_token_here>
+              - name: Authorization
+                in: header
+                description: JWT 토큰 (Bearer 방식)
+                required: true
+                type: string
+                schema:
+                    type: string
+                example: Bearer your_jwt_token_here
         requestBody:
             required: true
             content:
@@ -214,7 +215,7 @@ paths:
                                 message:
                                     type: string
                                     example: "팔로우 성공"
-  /user/unfollow::
+  /user/unfollow:
     delete:
         tags:
             - user
